# refineps

./: .gitignore  CLAUDE.md  CMakeLists.txt  claude_code_brief_firmware_v1.md  flash.sh  hw_test.py  sdkconfig
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/andrewscrap/refineps/: MainActivity.kt  MainViewModel.kt
android/app/src/main/java/com/andrewscrap/refineps/ble/: BleManager.kt  BleOperation.kt
android/app/src/main/java/com/andrewscrap/refineps/ui/: MainScreen.kt
android/app/src/main/java/com/andrewscrap/refineps/ui/theme/: Theme.kt
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/notes/: README.md  ble.md  setup.md  ui.md
app/: proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/andrewscrap/refineps/: MainViewModel.kt
app/src/main/java/com/andrewscrap/refineps/ble/: BleManager.kt
app/src/main/java/com/andrewscrap/refineps/ui/theme/: Theme.kt
app/src/main/res/values/: strings.xml
firmware/: CLAUDE.md  CMakeLists.txt  ble_cmd.py  claude_code_brief_firmware_v1.md  flash.sh  hw_test.py  hw_test_power.py  refine_schema_v1.1.md  restore.sh  sdkconfig  sdkconfig.defaults
firmware/main/: CMakeLists.txt  bt_serial.c  bt_serial.h  idf_component.yml  main.c  main_ble.c  pwm.c  pwm.h  schema.c  schema.h  telemetry.c  telemetry.h
firmware/notes/: README.md  hardware.md  setup.md  source-map.md
main/: bt_serial.c  pwm.h  schema.c  telemetry.c
notes/: README.md  architecture.md  decisions.md  repo-map.md  roadmap.md  session-handoff.md  workflow.md
